[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graphflow"
version = "0.1.0"
description = "A Python library for creating and executing graph-based workflows with context sharing and subflows"
requires-python = ">=3.7"
authors = [
    {name = "Your Name"}
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio"
]

[tool.setuptools]
packages = ["graphlib"]
package-dir = {graphlib = "graphlib"}
